<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
<!-- seguint el tutorial de android stuido https://developer.android.com/studio/write/translations-editor
no hem fa la traduccio almenys en el probra normal amb el simulador-->
    <TextView
        android:id="@+id/centre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text=""
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titol"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/centre"
        app:layout_constraintCircle="@id/centre"
        app:layout_constraintCircleAngle="0"
        app:layout_constraintCircleRadius="120dp"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Fúcsia"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/centre"
        app:layout_constraintCircle="@id/centre"
        app:layout_constraintCircleAngle="30"
        app:layout_constraintCircleRadius="85dp"
        app:layout_constraintStart_toStartOf="parent"
        />
    <TextView
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:background="@color/colorFuchsia"
        app:layout_constraintBottom_toTopOf="@+id/centre"
        app:layout_constraintCircle="@id/centre"
        app:layout_constraintCircleAngle="30"
        app:layout_constraintCircleRadius="60dp"
        app:layout_constraintStart_toStartOf="parent"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Plata"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/centre"
        app:layout_constraintCircle="@id/centre"
        app:layout_constraintCircleAngle="60"
        app:layout_constraintCircleRadius="85dp"
        app:layout_constraintStart_toStartOf="parent"
        />
    <TextView
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:background="@color/colorSilver"
        app:layout_constraintBottom_toTopOf="@+id/centre"
        app:layout_constraintCircle="@id/centre"
        app:layout_constraintCircleAngle="60"
        app:layout_constraintCircleRadius="60dp"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Gris"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/centre"
        app:layout_constraintCircle="@id/centre"
        app:layout_constraintCircleAngle="90"
        app:layout_constraintCircleRadius="85dp"
        app:layout_constraintStart_toStartOf="parent"
        />
    <TextView
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:background="@color/colorGray"
        app:layout_constraintBottom_toTopOf="@+id/centre"
        app:layout_constraintCircle="@id/centre"
        app:layout_constraintCircleAngle="90"
        app:layout_constraintCircleRadius="60dp"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Negre"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/centre"
        app:layout_constraintCircle="@id/centre"
        app:layout_constraintCircleAngle="120"
        app:layout_constraintCircleRadius="85dp"
        app:layout_constraintStart_toStartOf="parent"
        />
    <TextView
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:background="@color/colorBlack"
        app:layout_constraintBottom_toTopOf="@+id/centre"
        app:layout_constraintCircle="@id/centre"
        app:layout_constraintCircleAngle="120"
        app:layout_constraintCircleRadius="60dp"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Vermell"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/centre"
        app:layout_constraintCircle="@id/centre"
        app:layout_constraintCircleAngle="150"
        app:layout_constraintCircleRadius="85dp"
        app:layout_constraintStart_toStartOf="parent"
        />
    <TextView
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:background="@color/colorRed"
        app:layout_constraintBottom_toTopOf="@+id/centre"
        app:layout_constraintCircle="@id/centre"
        app:layout_constraintCircleAngle="150"
        app:layout_constraintCircleRadius="60dp"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Marró"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/centre"
        app:layout_constraintCircle="@id/centre"
        app:layout_constraintCircleAngle="180"
        app:layout_constraintCircleRadius="85dp"
        app:layout_constraintStart_toStartOf="parent"
        />
    <TextView
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:background="@color/colorMaroon"
        app:layout_constraintBottom_toTopOf="@+id/centre"
        app:layout_constraintCircle="@id/centre"
        app:layout_constraintCircleAngle="180"
        app:layout_constraintCircleRadius="60dp"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Tronja"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/centre"
        app:layout_constraintCircle="@id/centre"
        app:layout_constraintCircleAngle="210"
        app:layout_constraintCircleRadius="85dp"
        app:layout_constraintStart_toStartOf="parent"
        />
    <TextView
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:background="@color/colorOrange"
        app:layout_constraintBottom_toTopOf="@+id/centre"
        app:layout_constraintCircle="@id/centre"
        app:layout_constraintCircleAngle="210"
        app:layout_constraintCircleRadius="60dp"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Groc"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/centre"
        app:layout_constraintCircle="@id/centre"
        app:layout_constraintCircleAngle="240"
        app:layout_constraintCircleRadius="85dp"
        app:layout_constraintStart_toStartOf="parent"
        />
    <TextView
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:background="@color/colorYellow"
        app:layout_constraintBottom_toTopOf="@+id/centre"
        app:layout_constraintCircle="@id/centre"
        app:layout_constraintCircleAngle="240"
        app:layout_constraintCircleRadius="60dp"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Oliva"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/centre"
        app:layout_constraintCircle="@id/centre"
        app:layout_constraintCircleAngle="270"
        app:layout_constraintCircleRadius="85dp"
        app:layout_constraintStart_toStartOf="parent"
        />
    <TextView
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:background="@color/colorOlive"
        app:layout_constraintBottom_toTopOf="@+id/centre"
        app:layout_constraintCircle="@id/centre"
        app:layout_constraintCircleAngle="270"
        app:layout_constraintCircleRadius="60dp"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Lima"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/centre"
        app:layout_constraintCircle="@id/centre"
        app:layout_constraintCircleAngle="300"
        app:layout_constraintCircleRadius="85dp"
        app:layout_constraintStart_toStartOf="parent"
        />
    <TextView
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:background="@color/colorLime"
        app:layout_constraintBottom_toTopOf="@+id/centre"
        app:layout_constraintCircle="@id/centre"
        app:layout_constraintCircleAngle="300"
        app:layout_constraintCircleRadius="60dp"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Verd"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/centre"
        app:layout_constraintCircle="@id/centre"
        app:layout_constraintCircleAngle="330"
        app:layout_constraintCircleRadius="85dp"
        app:layout_constraintStart_toStartOf="parent"
        />
    <TextView
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:background="@color/colorGreen"
        app:layout_constraintBottom_toTopOf="@+id/centre"
        app:layout_constraintCircle="@id/centre"
        app:layout_constraintCircleAngle="330"
        app:layout_constraintCircleRadius="60dp"
        app:layout_constraintStart_toStartOf="parent"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Blau"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/centre"
        app:layout_constraintCircle="@id/centre"
        app:layout_constraintCircleAngle="0"
        app:layout_constraintCircleRadius="85dp"
        app:layout_constraintStart_toStartOf="parent"
        />
    <TextView
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:background="@color/colorBlue"
        app:layout_constraintBottom_toTopOf="@+id/centre"
        app:layout_constraintCircle="@id/centre"
        app:layout_constraintCircleAngle="0"
        app:layout_constraintCircleRadius="60dp"
        app:layout_constraintStart_toStartOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>